--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Mratiebatie\\GenerateLanguageFile\\": "src/"
+            "MrAtiebatie\\GenerateLanguageFile\\": "src/"
         }
     },
     "extra": {
